@@ -22,12 +22,34 @@ use GDPR::IAB::TCFv2::RangeSection;
 
 our $VERSION = "0.07";
 
-use constant CONSENT_STRING_TCF2_SEPARATOR => '.';
-use constant CONSENT_STRING_TCF2_PREFIX    => 'C';
-use constant MIN_BYTE_SIZE                 => 29;
-use constant MIN_BIT_SIZE                  => 8 * MIN_BYTE_SIZE;
-use constant TCF_VERSION                   => 2;
-use constant ASSUMED_MAX_VENDOR_ID         => 0x7FFF;   # 32767 or (1 << 15) -1
+use constant {
+    CONSENT_STRING_TCF2_SEPARATOR => '.',
+    CONSENT_STRING_TCF2_PREFIX    => 'C',
+    MIN_BYTE_SIZE                 => 29,
+    TCF_VERSION                   => 2,
+    ASSUMED_MAX_VENDOR_ID         => 0x7FFF,    # 32767 or (1 << 15) -1
+
+# offsets
+    VERSION_OFFSET                       => 0,
+    CREATED_OFFSET                       => 6,
+    LAST_UPDATED_OFFSET                  => 42,
+    CMP_ID_OFFSET                        => 78,
+    CMP_VERSION_OFFSET                   => 90,
+    CONSENT_SCREEN_OFFSET                => 102,
+    CONSENT_LANGUAGE_OFFSET              => 108,
+    VENDOR_LIST_VERSION_OFFSET           => 120,
+    POLICY_VERSION_OFFSET                => 132,
+    SERVICE_SPECIFIC_OFFSET              => 138,
+    USE_NON_STANDARD_STACKS_OFFSET       => 139,
+    SPECIAL_FEATURE_OPT_IN_OFFSET        => 140,
+    PURPOSE_CONSENT_ALLOWED_OFFSET       => 152,
+    PURPOSE_LIT_ALLOWED_OFFSET           => 176,
+    PURPOSE_ONE_TREATMENT_OFFSET         => 200,
+    PUBLISHER_COUNTRY_CODE_OFFSET        => 201,
+    MAX_VENDOR_ID_CONSENT_OFFSET         => 213,
+    VENDOR_CONSENT_RANGE_ENCODING_OFFSET => 229,
+    VENDOR_CONSENT_OFFSET                => 230,
+};
 
 INIT {
     if ( my $native_decode_base64url = MIME::Base64->can("decode_base64url") )
@@ -51,7 +73,7 @@ sub Parse {
     my $data_size = length($data);
 
     croak "vendor consent strings are at least @{[ MIN_BYTE_SIZE ]} bytes long"
-      if $data_size < MIN_BIT_SIZE;
+      if $data_size < 8 * MIN_BYTE_SIZE;
 
     my $self = {
         data                           => $data,
@@ -64,10 +86,10 @@ sub Parse {
 
     bless $self, $klass;
 
-    croak 'consent string is not tcf version 2'
+    croak "consent string is not tcf version @{[ TCF_VERSION ]}"
       unless $self->version == TCF_VERSION;
 
-    croak 'invalid vendor list version' unless $self->vendor_list_version;
+    croak 'invalid vendor list version' if $self->vendor_list_version == 0;
 
     # parse consent
 
@@ -92,13 +114,13 @@ sub Parse {
 sub version {
     my $self = shift;
 
-    return get_uint6( $self->{data}, 0 );
+    return get_uint6( $self->{data}, VERSION_OFFSET );
 }
 
 sub created {
     my $self = shift;
 
-    my ( $seconds, $nanoseconds ) = $self->_get_epoch(6);
+    my ( $seconds, $nanoseconds ) = $self->_get_epoch(CREATED_OFFSET);
 
     return wantarray ? ( $seconds, $nanoseconds ) : $seconds;
 }
@@ -106,7 +128,7 @@ sub created {
 sub last_updated {
     my $self = shift;
 
-    my ( $seconds, $nanoseconds ) = $self->_get_epoch(42);
+    my ( $seconds, $nanoseconds ) = $self->_get_epoch(LAST_UPDATED_OFFSET);
 
     return wantarray ? ( $seconds, $nanoseconds ) : $seconds;
 }
@@ -125,49 +147,49 @@ sub _get_epoch {
 sub cmp_id {
     my $self = shift;
 
-    return get_uint12( $self->{data}, 78 );
+    return get_uint12( $self->{data}, CMP_ID_OFFSET );
 }
 
 sub cmp_version {
     my $self = shift;
 
-    return get_uint12( $self->{data}, 90 );
+    return get_uint12( $self->{data}, CMP_VERSION_OFFSET );
 }
 
 sub consent_screen {
     my $self = shift;
 
-    return get_uint6( $self->{data}, 102 );
+    return get_uint6( $self->{data}, CONSENT_SCREEN_OFFSET );
 }
 
 sub consent_language {
     my $self = shift;
 
-    return get_char6_pair( $self->{data}, 108 );
+    return get_char6_pair( $self->{data}, CONSENT_LANGUAGE_OFFSET );
 }
 
 sub vendor_list_version {
     my $self = shift;
 
-    return get_uint12( $self->{data}, 120 );
+    return get_uint12( $self->{data}, VENDOR_LIST_VERSION_OFFSET );
 }
 
 sub policy_version {
     my $self = shift;
 
-    return get_uint6( $self->{data}, 132 );
+    return get_uint6( $self->{data}, POLICY_VERSION_OFFSET );
 }
 
 sub is_service_specific {
     my $self = shift;
 
-    return is_set( $self->{data}, 138 );
+    return is_set( $self->{data}, SERVICE_SPECIFIC_OFFSET );
 }
 
 sub use_non_standard_stacks {
     my $self = shift;
 
-    return is_set( $self->{data}, 139 );
+    return is_set( $self->{data}, USE_NON_STANDARD_STACKS_OFFSET );
 }
 
 sub is_special_feature_opt_in {
@@ -176,7 +198,7 @@ sub is_special_feature_opt_in {
     croak "invalid special feature id $id: must be between 1 and 12"
       if $id < 1 || $id > 12;
 
-    return is_set( $self->{data}, 140 + $id - 1 );
+    return is_set( $self->{data}, SPECIAL_FEATURE_OPT_IN_OFFSET + $id - 1 );
 }
 
 sub is_purpose_consent_allowed {
@@ -185,7 +207,7 @@ sub is_purpose_consent_allowed {
     croak "invalid purpose id $id: must be between 1 and 24"
       if $id < 1 || $id > 24;
 
-    return is_set( $self->{data}, 152 + $id - 1 );
+    return is_set( $self->{data}, PURPOSE_CONSENT_ALLOWED_OFFSET + $id - 1 );
 }
 
 sub is_purpose_legitimate_interest_allowed {
@@ -194,25 +216,25 @@ sub is_purpose_legitimate_interest_allowed {
     croak "invalid purpose id $id: must be between 1 and 24"
       if $id < 1 || $id > 24;
 
-    return is_set( $self->{data}, 176 + $id - 1 );
+    return is_set( $self->{data}, PURPOSE_LIT_ALLOWED_OFFSET + $id - 1 );
 }
 
 sub purpose_one_treatment {
     my $self = shift;
 
-    return is_set( $self->{data}, 200 );
+    return is_set( $self->{data}, PURPOSE_ONE_TREATMENT_OFFSET );
 }
 
 sub publisher_country_code {
     my $self = shift;
 
-    return get_char6_pair( $self->{data}, 201 );
+    return get_char6_pair( $self->{data}, PUBLISHER_COUNTRY_CODE_OFFSET );
 }
 
 sub max_vendor_id_consent {
     my $self = shift;
 
-    return get_uint16( $self->{data}, 213 );
+    return get_uint16( $self->{data}, MAX_VENDOR_ID_CONSENT_OFFSET );
 }
 
 sub max_vendor_id_legitimate_interest {
@@ -247,11 +269,17 @@ sub _parse_vendor_consents {
 
     if ( $self->_is_vendor_consent_range_encoding ) {
         ( $vendor_consents, $legitimate_interest_start ) =
-          $self->_parse_range_section( $self->max_vendor_id_consent, 230 );
+          $self->_parse_range_section(
+            $self->max_vendor_id_consent,
+            VENDOR_CONSENT_OFFSET
+          );
     }
     else {
         ( $vendor_consents, $legitimate_interest_start ) =
-          $self->_parse_bitfield( $self->max_vendor_id_consent, 230 );
+          $self->_parse_bitfield(
+            $self->max_vendor_id_consent,
+            VENDOR_CONSENT_OFFSET
+          );
     }
 
     $self->{vendor_consents} = $vendor_consents;
@@ -372,7 +400,7 @@ sub _decode_base64url {
 sub _is_vendor_consent_range_encoding {
     my $self = shift;
 
-    return is_set( $self->{data}, 229 );
+    return is_set( $self->{data}, VENDOR_CONSENT_RANGE_ENCODING_OFFSET );
 }
 
 sub _parse_range_section {
