@@ -1,3 +1,4 @@
+  - substitute offset numbers by constants
   - fix typos in pod documentation
   - test tests for pod
 
